[WIP] Document users API
